[package]
name = "connect"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
crossbeam-channel = "0.5"
rand = "0.8.5"
winapi  = "0.3.9"
pbr = "1.1.1"
dialoguer = "0.10.3"
build-info = "0.0.30"

[build-dependencies]
build-info-build = "0.0.30"